objects/CaseDivisionBusinessUnit__mdt.object
<CustomObject>
    <description>This custom metadata is created to store the Case Division and Business Units combine mapping with area of legitimate interest for customers.</description>
    <fields>
        <fullName>Area__c</fullName>
        <description>This field stores legitimate interest area along with combination</description>
        <inlineHelpText>I - Industry
U - Utility
T -Transport
IU - Industry and Utility
IT - Industry and Transport
UT - Utility and Transport
IUT - Industry, Utility and Transport</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IUT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <description>This field stores the value of Business Units from Case and is dependent on Division</description>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>EPBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMSU</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>This field stores the value of Division from Case. There are different divisions for which cases are created.</description>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Division &amp; Business Unit</label>
    <pluralLabel>Case Division &amp; Business Unit</pluralLabel>
</CustomObject>